syntax = "proto3";

option java_multiple_files = false;
option java_package = "org.cyk";
option java_outer_classname = "UserinfoProto";

service UserinfoService {
  rpc login(LoginReq) returns(LoginResp) {};
  rpc reg(RegReq) returns(RegResp) {};
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
}

message RegReq {
  string username = 1;
  string password = 2;
}

message RegResp {
  int32 result = 1;
}